[gd_scene load_steps=4 format=3 uid="uid://h1hb81pq8rx8"]

[ext_resource type="Script" uid="uid://dsd5fytu1qlms" path="res://screens/allies_market/ally_details_popup/ally_details_popup.gd" id="1_popup_script"]
[ext_resource type="Texture2D" uid="uid://fiodc4axyxnb" path="res://data/game_characters/allies/res_data/assets/chest_thumbnail.png" id="2_au64o"]
[ext_resource type="PackedScene" uid="uid://dr58mra5vkhob" path="res://screens/allies_market/ally_details_popup/ally_level_presenter/ally_level_presenter.tscn" id="2_htj73"]

[node name="AllyDetailsPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_popup_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.145098, 0, 0.764706)

[node name="AllyThumbnail" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 484.0
offset_top = 157.0
offset_right = 662.0
offset_bottom = 302.0
texture = ExtResource("2_au64o")

[node name="AllyName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 669.0
offset_top = 170.0
offset_right = 1196.0
offset_bottom = 266.0
theme_override_font_sizes/font_size = 70
text = "Mi mejor aliado"

[node name="AllylevelsPresContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 289.0
offset_top = 383.0
offset_right = 1360.0
offset_bottom = 446.0

[node name="AllyLevelPresenter" parent="AllylevelsPresContainer" instance=ExtResource("2_htj73")]
layout_mode = 2

[node name="CloseBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 1638.0
offset_top = 50.0
offset_right = 1851.0
offset_bottom = 213.0
theme_override_font_sizes/font_size = 55
text = "Close"

[connection signal="pressed" from="CloseBtn" to="." method="_on_close_btn_pressed"]
